My Stock, New Entry: search for many ISBNs at once (¡only ones in stock!)
for #156

We can enter comma-separated ISBNs into the input field.
This returns the ISBNs we find in stock.

CAUTION: we don't currently search for unknown ISBNs in the remote
datasource. If we had a lot of ISBNs, this will take time, and making
the UI right is not trivial.
The middle ground is:
- with new books, one should scan them one by one into a List, or into
new Entry
- with books from the stock, one can use a memeroy barcode scanner and
search for many at once. Thus, we can still manipulate many at
once (add to a list, command, etc).

The current Inventory and List UIs are also not adapted for this.

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -146,6 +146,8 @@ div(ng-cloak, ng-controller="collectionController")
 
       .btn-group
         select.form-control(ng-show="cards.length", ng-model="page_size", ng-options="it for it in page_sizes", style="width: 5em")
+      div(id="message", ng-show="meta.message", ng-class="meta.message_status") {{ 'meta.message' | ng }}
+
 
 
  div(ng-show="cards.length == 0") {% trans "No results" %}
