--- a/search/static/search/style.css
+++ b/search/static/search/style.css
@@ -205,3 +205,11 @@ a.my-black-link {
     }
 
 }
+
+.success {
+    background-color: LightGreen;
+}
+
+.warning {
+    background-color: orange;
+}
