Preferences: vat is a number. fixes input with comma error.

--- a/templates/search/preferences.jade
+++ b/templates/search/preferences.jade
@@ -55,7 +55,7 @@ div(ng-controller="preferencesController")
             h4 {% trans "VAT on books" %}
 
           .col-md-6
-            input(type="text", ng-model="vat_book")
+            input(type="number", ng-model="vat_book")
 
          //- .row
          //-   h3 {% trans "User preferences" %}
