Save a Card quantity as a DB field (management needed), filter Stock by quantity
for #162

required:

./manage.py compute_quantities

Otherwise, we can't filter on a Card's quantity easily,
and computing it each time is too long (2s for a thousand cards!).

Now, in My Stock, we can filter on the quantity.

We had a look at django-denorm, but it's a no go (see open issues).

--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -95,6 +95,13 @@ div(ng-cloak, ng-controller="collectionController")
           ng-model="shelf"
           ng-options="elt.fields.name for elt in shelfs")
 
+    div.form-group
+      label.col-sm-4 {% trans "Quantity" %}
+      div.col-md-8
+        select.form-control(
+          ng-model="quantity_choice"
+          ng-options="elt.name for elt in quantity_choices")
+
  .row
    .col-md-7(style="margin-top: 7px; margin-bottom: 7px")
      input.btn.btn-primary(value="{% trans 'Search' %}", ng-click="validate()", type="submit")
