--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -120,8 +120,11 @@ div(ng-cloak, ng-controller="collectionController")
          span.caret
 
        ul.dropdown-menu
-         li: a(href="/stock/export?query={{ 'query' | ng }}&format=txt&select=selection&publisher_id={{ 'publisher.pk' | ng}}&place_id={{ 'place.id' | ng}}&card_type={{ 'card_type' | ng}}&shelf_id={{ 'shelf.pk' | ng}}&distributor_id={{ 'distributor.id' | ng}}&quantity_choice={{ 'quantity_choice.id' | ng }}", ng-show="selected", title='{% trans "Export the selection to txt" %}'){% trans 'Selection to txt' %}
-         li: a(href="/stock/export?format=csv&select=all", title='{% trans "Export the stock to csv" %}'){% trans 'Stock to csv (Excel, LibreOffice) (this may take a while)' %}
+         li: a(href="/stock/export?query={{ 'query' | ng }}&format=txt&select=selection&publisher_id={{ 'publisher.pk' | ng}}&place_id={{ 'place.id' | ng}}&card_type={{ 'card_type' | ng}}&shelf_id={{ 'shelf.pk' | ng}}&distributor_id={{ 'distributor.id' | ng}}&quantity_choice={{ 'quantity_choice.id' | ng }}", ng-show="selected", title='{% trans "Export the selection to txt" %}'){% trans 'Selection - txt' %}
+         li: a(href="/stock/export?query={{ 'query' | ng }}&format=csv&select=selection&publisher_id={{ 'publisher.pk' | ng}}&place_id={{ 'place.id' | ng}}&card_type={{ 'card_type' | ng}}&shelf_id={{ 'shelf.pk' | ng}}&distributor_id={{ 'distributor.id' | ng}}&quantity_choice={{ 'quantity_choice.id' | ng }}", ng-show="selected", title='{% trans "Export the selection to txt" %}'){% trans 'Selection - csv' %}
+         li.divider(role="separator")
+         li: a(href="/stock/export?format=csv&select=all", title='{% trans "Export the stock to csv" %}'){% trans 'Stock - csv (Excel, LibreOffice) (this may take a while)' %}
+         li.divider(role="separator")
          li: a(href="/stock/exports/") {% trans "List of exports" %}
 
       .btn-group
