(minor) update label and translation
for #167

--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -47,7 +47,7 @@ div.ng-cloak(ng-controller="cardAddController")
                 i.glyphicon.glyphicon-plus-sign(title='{% trans "Add a supplier" %}')
 
       tr
-        td {% trans "Minimal qty" %}
+        td {% trans "Minimal quantity before command" %}
         td
           input(type="number", min=0, ng-model="threshold")
 
