(minor) label: selling place (point de vente)
fixes #167

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -66,7 +66,7 @@ div.ng-cloak(ng-controller="sellController")
 
         .col-md-3
           form
-            label {% trans "Place" %}
+            label {% trans "Selling place" %}
             select.form-control(
                 ng-model="place"
                 ng-options="it.name for it in places"
