Baskets and Sell input: turn off the browser's autocomplete

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -101,6 +101,7 @@ div.ng-cloak(ng-controller="sellController")
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
               id="default-input"
+              autocomplete="off"
               placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
             )
             i.glyphicon.glyphicon-search(ng-show='loadingCards')
