--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -119,6 +119,7 @@ div(ng-cloak, ng-controller="basketsController")
               typeahead-on-select="add_selected_card($item)"
               title="{% trans 'Use TAB to validate your choice, Enter to proceed.' %}"
               id="default-input"
+              autocomplete="off"
               placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
             )
 
