Restocking: allow to edit the quantity to move
for #168

--- a/templates/search/restocking.html
+++ b/templates/search/restocking.html
@@ -71,8 +71,8 @@
         <td> {{ card.quantity_reserve }} </td>
         <td> {{ card.quantity_selling_places }} </td>
         <td>
-          <!-- <input class="my-number-input" type="number" min=0 max=99 value="{{ card.quantity_to_restock }}"/> -->
-          {{ card.quantity_to_restock }}
+          <input data-card-id="{{ card.id }}" class="my-number-input" type="number" min=0 max=99 value="{{ card.quantity_to_restock }}"/>
+          <!-- {{ card.quantity_to_restock }} -->
         </td>
         <td>
           <p class="btn-group">
