--- a/templates/search/inventory_view_component.jade
+++ b/templates/search/inventory_view_component.jade
@@ -85,6 +85,7 @@ div(ng-controller=controller)
                   title="{% trans 'Use TAB to validate your choice, Enter to proceed.'%}"
                   id="default-input"
                   placeholder='{% trans "Search any isbn, search by keywords in your stock" %}'
+                  autocomplete="off"
               )
 
               span.input-group-btn
