Card add: write "add", not "buy"

--- a/templates/search/card_add.jade
+++ b/templates/search/card_add.jade
@@ -67,7 +67,7 @@ div.ng-cloak(ng-controller="cardAddController")
           td {% trans "total" %}: {{ "total_deposits" | ng }}
 
   .row
-      h4 {% trans "Buy copies for each place" %}:
+      h4 {% trans "Add copies for each place" %}:
       table.table.table-condensed.my-table-narrow
         tr(ng-repeat="it in places")
           td.my-narrow {{ "it.name" | ng }}
