search results: hide button "command for client", unfinished

--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -142,7 +142,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
         td
           div.row
             button.btn.btn-primary(ng-click="create_and_add(card)", title='{% trans "Add to your stock" %}') {% trans "Add…" %}
-          div.row
+          //div.row
             button.btn(ng-click="create_and_command_client(card)", title='{% trans "Command for a client" %}') {% trans "Command…" %}
 
  nav(style="float: right;", ng-show="cards.length != 0")
