--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -75,7 +75,7 @@ div#abelujo
                 a(target="_blank", href="{{ object.details_url }}") {{ object.data_source }}
             tr
               td
-                span: a(target="_blank", href="https://framabee.org/?q={{object.title}}+{{object.display_authors}}") {% trans "Web search" %}
+                span: a(target="_blank", href="https://duckduckgo.com/?q={{object.title}}+{{object.display_authors}}") {% trans "Web search" %}
                     span.glyphicon.glyphicon-share-alt(style="padding-left: 3px;")
 
         h4 {% trans "Comment" %} 
