(minor) Card show: remove card type next to price, it's always "book".

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -58,7 +58,7 @@ div#abelujo
 
       .row(style="margin-left: 1px;")
 
-        h4 {{ object.price | floatformat:2 | intcomma}} {% trans "€" %} ({{ object.card_type }})
+        h4 {{ object.price | floatformat:2 | intcomma}} {% trans "€" %}
         table.table.table-condensed.table-bordered
           tbody
             tr
