Card history, Sell search: correctly compute the total number of sells
a Sell transaction (SoldCards table) represents one transaction, and
we can buy two copies of the same title.

--- a/templates/search/card_history.jade
+++ b/templates/search/card_history.jade
@@ -47,6 +47,8 @@ div {% trans "Total sells" %}: {{ sells_data.total_sells }}
 
     for sell in sells_data.data
       div {{ sell.created }} - {{ sell.price_sold }} {% trans "€" %}
+        if sell.quantity != 1
+          span &nbsp x {{ sell.quantity }}
 
   .col-lg-3
     h4 {% trans "Other output movements" %}
